# learn-opengl-rs

./: Cargo.toml  README.md
src/: main.rs
src/_1_getting_started/: _1_1_hello_window.rs  _1_2_hello_window_clear.rs  mod.rs
src/drawing/: canvas.rs  color.rs  mod.rs
src/drawing/render/: mod.rs  pipeline.rs  shader.rs  shader_manager.rs  texture.rs  texture_manager.rs  vertex_manager.rs
src/shaders/: hello.fs  hello.vs  texture.fs  texture.vs
src/utils/: logger.rs
src/window/: mod.rs  window_manager.rs
