[package]
name = "learn-opengl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# create window
glfw = "0.45.0"
# GLAD-rs
gl = "0.14.0"
# A linear algebra and mathematics library for computer graphics.
cgmath = "0.18.0"
# imaging processing
image = "0.24.3"